# mcp_polygon

./: .coverage  .dockerignore  .env.example  .gitignore  ANALYSIS_README.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  COVERAGE_VISUALIZATION.md  DOCKER.md  Dockerfile  GAP_ANALYSIS_EXECUTIVE_SUMMARY.md  IMPLEMENTATION.md  PARAMS_ONLY_METHODS.md  PERFORMANCE_RECOMMENDATIONS.md  PERFORMANCE_REVIEW.md  PERFORMANCE_SUMMARY.md  PHASE-1.md  PHASE3_ACTION_ITEMS.md  PHASE3_COMPLETE.md  PHASE3_GAP_ANALYSIS.md  PHASE3_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REST_AUDIT.csv  SECURITY.md  SECURITY_AUDIT_PHASE3.md  SECURITY_REVIEW.md  SECURITY_SUMMARY.md  TESTING.md  WEBSOCKETS_IMPLEMENTATION.md  claude_desktop_config_http.json  docker-compose.yml  entrypoint.py  glama.json  manifest.json  pyproject.toml  pytest.ini  (+1 more)
docs/: ENDPOINT_PATTERNS.md  WEBSOCKETS_IMPLEMENTATION.md
src/mcp_polygon/: api_wrapper.py  formatters.py  server.py  validation.py
src/mcp_polygon/tools/: __init__.py  crypto.py  economy.py  forex.py  futures.py  indices.py  options.py  stocks.py
src/mcp_polygon/tools/rest/: __init__.py  crypto.py  economy.py  forex.py  futures.py  indices.py  options.py  stocks.py
tests/: conftest.py  test_api_wrapper.py  test_error_handling.py  test_integration_grouped_daily.py  test_rest_endpoints.py  test_validation.py
tests/test_websockets/: test_connection_manager.py  test_crypto_ws.py  test_forex_ws.py  test_futures_ws.py  test_indices_ws.py  test_options_ws.py  test_stocks_ws.py  test_stream_formatter.py
(+9 files in other folders)
